# tkp-decision-authority-intelligence

./: .gitignore  LICENSE  PUBLICATION_READINESS.md  README.md  WINDOWS_VERIFICATION_GATE.md  pyproject.toml
.github/workflows/: windows-verification.yml
docs/: INPUT_OUTPUT_CONTRACT.md  KNOWN_LIMITATIONS.md  PRIVACY_AND_SOURCE_RULES.md  PROJECT_FOREMAN_RELATIONSHIP.md
evidence/: HISTORIC_VALIDATION_SUMMARY.md  PUBLIC_TEST_RECEIPT.json
examples/: Assistant_Non_Authority_Register.json  Extraction_Run_Receipt.json  Natural_Language_Authority_Review_Queue.json  Structured_Authority_Ledger.json
fixtures/: sanitized_normalized_conversation.json
schema/: normalized_authority_input.schema.json
scripts/: Run_Public_Fixture.ps1
src/tkp_decision_authority_intelligence/: __init__.py  cli.py  extractor.py
tests/: test_extractor.py
